--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Jhankar's Portfolio</title>
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Jhankar Mahbub's</span> World!</h1>
+            <h3>Building Climber and Train Stopper.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ipsum saepe voluptatibus totam
+                cumque,
+                eaque dolorum omnis alias repellat beatae architecto fugit et, quidem sequi amet tenetur recusandae
+                magni
+                nesciunt.</p>
+            <a class="link-button" target="_blank" href="www.google.com">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
