--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flex-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Jhankar Mahbub's</span> World!</h1>
+            <h1><span class="orange-color">Shaker Madani's</span> World!</h1>
             <h3>Building Climber and Train Stopper.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ipsum saepe voluptatibus totam
                 cumque,
@@ -26,9 +26,49 @@
             <a class="link-button" target="_blank" href="www.google.com">Hire me</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/Shaker.jpg" alt="">
         </div>
     </section>
+    <section class="dream-big flex-container">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae similique libero vel sit neque, dicta illo
+                minus quaerat? Nulla necessitatibus laboriosam dicta saepe accusantium, sunt id dolorem repellendus
+                debitis similique!</p>
+            <a class="resume-button" href="www.google.com">Download Resume</a>
+        </div>
+
+    </section>
+    <h1>Experiences</h1>
+    <section class="experience-area">
+
+        <div class="flex-container">
+            <div class="half-width box-shadow">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022 Present | Pro Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum libero maxime error repudiandae
+                    beatae,
+                    voluptatem fugit optio, doloribus dignissimos, necessitatibus quisquam iusto. Ullam eum ratione eius
+                    natus quo quidem vero.</p>
+
+            </div>
+            <div class="half-width box-shadow yo">
+                <h2>Baby Stack Web Developer</h2>
+                <h3 class="orange-color">Baby </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sequi molestiae est fugit id voluptates
+                    nesciunt quibusdam facilis, maiores, delectus consequatur quas magnam dolore? Harum vel qui tempora
+                    voluptate. Totam.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>&copy; Copyright</p>
+    </footer>
 </body>
 
 </html>
